--- a/splash-style.css
+++ b/splash-style.css
@@ -13,10 +13,10 @@
   position: center;
   background-image: url("images/7.jpg");
   background-size: cover;
-  /* TITLE OF PAGE */
+  /* TITLE OF PAGE */kl */
   /* NAVIGATION */
   /* About Content */
-  /* Projects Section */ }
+  /* The Site Content */ }
   #main-view #main-title {
     margin-top: 580px;
     margin-right: 270px;
@@ -52,10 +52,10 @@
         color: #EAB543;
         text-decoration: none;
         transition: all 200ms ease-in-out; }
-      #main-view nav span#nav .resume-nav, #main-view nav span#nav .about-nav, #main-view nav span#nav .projects-nav, #main-view nav span#nav .contact-nav {
+      #main-view nav span#nav .resume-nav, #main-view nav span#nav .about-nav, #main-view nav span#nav .site-nav, #main-view nav span#nav .projects-nav, #main-view nav span#nav .contact-nav {
         text-transform: uppercase;
         color: #f1f2f6; }
-      #main-view nav span#nav .resume-nav:hover, #main-view nav span#nav .about-nav:hover, #main-view nav span#nav .projects-nav:hover, #main-view nav span#nav .contact-nav:hover {
+      #main-view nav span#nav .resume-nav:hover, #main-view nav span#nav .about-nav:hover, #main-view nav span#nav .site-nav:hover, #main-view nav span#nav .projects-nav:hover, #main-view nav span#nav .contact-nav:hover {
         cursor: pointer;
         font-size: 26px;
         color: #EAB543;
@@ -83,13 +83,13 @@
     display: none;
     margin-left: 15%;
     margin-top: 8%;
-    max-width: 500px;
-    min-width: 500px;
+    max-width: 505px;
+    min-width: 505px;
     height: 420px;
     padding: 0 0.4em;
     background-color: black;
     opacity: 0.9;
-    animation: about 300ms ease-in-out forwards; }
+    animation: about 500ms ease-in-out forwards; }
     #main-view #about .top-banner {
       display: flex;
       align-items: center;
@@ -127,70 +127,61 @@
         transform: scale(1.3); }
       #main-view #about .close-about.show {
         opacity: 1; }
-  #main-view #projects {
-    height: 500px;
-    width: 745px;
-    background: black;
+  #main-view #site {
+    font-family: "Titillium Web", sans-serif;
+    display: none;
     position: absolute;
-    top: 0;
-    right: 0;
-    margin-top: 5%;
-    margin-right: 8%;
-    padding-top: 55px;
+    top: 180px;
+    right: 140px;
+    height: 200px;
+    min-width: 805px;
+    max-width: 805px;
     padding-left: 5px;
-    opacity: 0;
-    font-family: "Titillium Web", sans-serif; }
-    #main-view #projects.show {
-      opacity: 1;
-      animation: projects 300ms ease-in-out forwards; }
-    #main-view #projects .item {
-      height: 200px;
-      width: 280px;
-      margin-bottom: 5px;
-      animation: project-items 600ms ease-in-out forwards;
-      background-size: cover;
-      background-position: center; }
-      #main-view #projects .item:nth-child(3) {
-        background-image: url("images/proj1.jpg");
-        width: 360px; }
-      #main-view #projects .item:nth-child(4) {
-        background-image: url("images/proj4.jpg");
-        width: 360px; }
-      #main-view #projects .item:nth-child(5) {
-        background-image: url("images/proj3.jpg");
-        width: 360px; }
-      #main-view #projects .item:nth-child(6) {
-        width: 360px;
-        background-image: url("images/proj2.jpg"); }
-    #main-view #projects .top-banner {
-      position: absolute;
-      margin-left: -5px;
-      border: 2px solid black;
-      top: 0;
-      z-index: 2;
-      width: 100%;
-      height: 50px;
-      background-image: url("images/7-banner.jpg");
+    background-color: black;
+    opacity: 0.9;
+    animation: site 600ms ease-in-out forwards; }
+    #main-view #site .top-banner {
       display: flex;
       align-items: center;
-      justify-content: center; }
-      #main-view #projects .top-banner h2 {
-        font-size: 25px;
-        color: #EAB543; }
-    #main-view #projects .close-projects {
+      justify-content: center;
       position: absolute;
-      z-index: 3;
-      font-size: 22px;
+      border: 2px solid black;
       top: 0;
       right: 0;
-      display: block;
+      height: 50px;
+      width: 100%;
+      background-image: url("images/7-banner.jpg");
+      background-size: cover; }
+    #main-view #site p {
+      position: absolute;
+      top: 72px;
+      font-family: "Titillium Web", sans-serif;
+      font-size: 17px;
+      color: #EAB543; }
+      #main-view #site p span {
+        margin-left: 45%; }
+        #main-view #site p span a {
+          color: #6480B2; }
+          #main-view #site p span a:hover {
+            color: #fff; }
+    #main-view #site h2 {
+      font-size: 25px;
+      color: #EAB543; }
+    #main-view #site.show {
+      display: block; }
+    #main-view #site .close-site {
+      position: absolute;
+      z-index: 2;
+      font-size: 22px;
+      right: 0;
+      display: inline-block;
       color: #EAB543;
       opacity: 0;
       transition: all 200ms ease-in-out; }
-      #main-view #projects .close-projects:hover {
+      #main-view #site .close-site:hover {
         cursor: pointer;
         transform: scale(1.3); }
-      #main-view #projects .close-projects.show {
+      #main-view #site .close-site.show {
         opacity: 1; }
 
 .overlay {
@@ -207,6 +198,66 @@
     display: flex;
     align-items: center;
     justify-content: center; }
+
+/* Projects Section */
+.projects {
+  height: 600px;
+  width: 1200px;
+  background-color: black;
+  position: absolute;
+  display: none;
+  top: 50%;
+  left: 50%;
+  right: 0;
+  bottom: 0;
+  padding-top: 50px;
+  margin-left: -600px;
+  margin-top: -300px;
+  font-family: "Titillium Web", sans-serif; }
+  .projects.show {
+    display: block;
+    animation: projects 500ms ease-in-out forwards; }
+  .projects .item {
+    height: 250px;
+    animation: project-items 1200ms ease-in-out forwards;
+    cursor: pointer;
+    background-size: cover;
+    background-position: center; }
+    .projects .item:nth-child(3) {
+      background-image: url("images/proj1.jpg"); }
+    .projects .item:nth-child(4) {
+      background-image: url("images/proj4.jpg"); }
+    .projects .item:nth-child(5) {
+      background-image: url("images/proj3.jpg"); }
+    .projects .item:nth-child(6) {
+      background-image: url("images/proj2.jpg"); }
+  .projects .item, .projects .grid-sizer {
+    width: 50%; }
+  .projects .top-banner {
+    position: absolute;
+    border: 2px solid black;
+    top: 0;
+    z-index: 2;
+    width: 100%;
+    height: 50px;
+    background-image: url("images/7-banner.jpg");
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .projects .top-banner h2 {
+      font-size: 25px;
+      color: #EAB543; }
+  .projects .close-btn {
+    position: absolute;
+    z-index: 3;
+    right: 0.5em;
+    top: 0.5em;
+    font-size: 22px;
+    color: #EAB543;
+    cursor: pointer;
+    transition: all 200ms ease-in-out; }
+    .projects .close-btn:hover {
+      transform: scale(1.3); }
 
 .content {
   position: absolute;
@@ -308,6 +359,19 @@
     .resume .close-btn:hover {
       transform: scale(1.2); }
 
+/* Testing second splash page for projects */
+.splash-2 {
+  height: 100vh;
+  width: 100%;
+  text-align: left;
+  font-family: "Titillium Web", sans-serif; }
+  .splash-2 h2 {
+    margin-top: 50px;
+    margin-left: 15%; }
+  .splash-2 p {
+    width: 70%;
+    margin: 50px auto 0; }
+
 /* Animations */
 @keyframes nav-animation {
   0% {
@@ -331,17 +395,31 @@
     transform: translateX(-1000px); }
   100% {
     transform: translateX(0px); } }
+@keyframes site {
+  0% {
+    transform: translateY(-400px); }
+  100% {
+    transform: translateY(0px); } }
 @keyframes projects {
   0% {
-    transform: translateX(1000px); }
+    transform: translateY(1000px);
+    opacity: 0.2; }
   100% {
-    transform: translateX(0px); } }
+    opacity: 1;
+    transform: translateY(0px); } }
 @keyframes project-items {
   0% {
     opacity: 0; }
+  10% {
+    transform: translateY(20px); }
+  30% {
+    transform: translateY(-20px); }
   50% {
-    opacity: 0; }
+    transform: translateY(10px); }
+  75% {
+    transform: translateY(-10px); }
   100% {
+    transform: translateY(0);
     opacity: 1; } }
 @keyframes flip {
   0% {
