--- a/splash-style.sass
+++ b/splash-style.sass
@@ -2,8 +2,8 @@
 $main-theme: #EAB543
 $main-title-offsetX: 270px
 $main-title-offsetY: 580px
-$main-font: 'Neucha', sans-serif
-$formal-font: 'Raleway', sans-serif
+$main-font: 'Raleway', sans-serif
+$formal-font: 'Fira Sans', sans-serif
 
 *
   margin: 0px
@@ -30,8 +30,9 @@ $formal-font: 'Raleway', sans-serif
 
 
   #main-title
-    margin-top: $main-title-offsetY
-    margin-right: $main-title-offsetX
+    position: absolute
+    top: 65%
+    left: 60%
     float: right
 
     h1
@@ -46,6 +47,7 @@ $formal-font: 'Raleway', sans-serif
         padding: 0 0.2em
         background-color: none
     h2
+      font-family: 'Neucha', sans-serif
       font-size: 23px
       padding: 0 0.2em
       background-color: $main-theme
@@ -61,6 +63,7 @@ $formal-font: 'Raleway', sans-serif
     position: absolute
     top: 18%
     left: 18%
+    font-family: 'Neucha', sans-serif
     font-size: 28px
     color: $main-theme
 
@@ -123,7 +126,7 @@ $formal-font: 'Raleway', sans-serif
     font-family: $formal-font
     display: none
     margin-left: 15%
-    margin-top: 8%
+    margin-top: 20%
     max-width: 505px
     min-width: 505px
     height: 360px
@@ -184,7 +187,7 @@ $formal-font: 'Raleway', sans-serif
     font-family: $formal-font
     display: none
     position: absolute 
-    top: 240px
+    top: 25%
     right: 140px
     height: 180px
     min-width: 805px
@@ -305,13 +308,13 @@ $proj-width: 1200px
 
     // masonry 
     &:nth-child(4)
-      background-image: url('images/proj1.jpg')
+      background-image: url('images/proj1.png')
     &:nth-child(5)
-      background-image: url('images/proj4.jpg')
+      background-image: url('images/proj2.png')
     &:nth-child(6)
-      background-image: url('images/proj3.jpg')       
+      background-image: url('images/proj4.png')       
     &:nth-child(7)
-      background-image: url('images/proj2.jpg')
+      background-image: url('images/proj3.png')
 
 
   .item, .grid-sizer
@@ -390,9 +393,10 @@ $content-height: 400px
       transform: scale(1.3)
   
   .contact 
-    font-size: 20px 
+    font-size: 18px 
     font-weight: bold
     font-family: $formal-font
+    margin-left: 10px
 
     h2 
       font-family: $formal-font
@@ -604,10 +608,21 @@ $cv-btn-height: 35px
 @media (max-width: 1000px)
 
   #main-view 
-    #main-title h1
-      span
-        margin-left: 100px
-        font-size: 18px
+
+    
+    #main-title 
+      top: 50%
+      left: 50%
+      
+      h1
+        margin-left: -200px
+        text-align: center
+        span
+          font-size: 18px
+      h2
+        margin-left: -105px
+        width: 210px
+        font-size: 12px
 
     nav 
       position: absolute 
@@ -627,14 +642,43 @@ $cv-btn-height: 35px
 /* Responsive Design */
 
 @media (max-width: 768px)
-  body #main-view
-    width: 768px
-    height: 1024px
+
+  body 
+    #main-view
+      width: 768px
+      height: 1024px
+
+    #main-title 
+      top: 50%
+      left: 50%
+      
+      h1
+        margin-left: -200px
+        text-align: center
+        span
+          font-size: 18px
+      h2
+        margin-left: -105px
+        width: 210px
+        font-size: 12px
 
 @media (max-width: 414px) 
-  body  #main-view
-    width: 414px
-    height: 736px
+  body 
+    #main-view
+      width: 414px
+      height: 736px
+
+      #main-title 
+        width: 100%
+        top: 0%
+        right: 0%
+
+        h1
+          span
+            font-size: 18px
+        h2
+          width: 210px
+          font-size: 12px
 
 
 
